Enhance Keycloak integration